--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ Temporary Items
 
 ## User settings
 xcuserdata/
+# 추가된 개인 설정 무시 규칙
+*.xcuserstate
+*.xcschememanagement.plist
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
